Fixed uneven font-size on photo caption and comments, removed the word 'like' when the photo hasn't been liked yet

--- a/client/src/styles/main.css
+++ b/client/src/styles/main.css
@@ -60,14 +60,6 @@ a {
   margin-top: 15px;
 }
 
-.h6-nearbyPhotoCard {
-  height: 14px;
-  font-size: 16px;
-  text-align: left;
-  color: #000000;
-  margin: 10px auto;
-}
-
 .refresh-button, .user-button {
   font-size: 22px;
   margin-top: 22px; 
@@ -144,6 +136,14 @@ a {
   letter-spacing: -0.2px;
   text-align: left;
 }
+
+.photo-caption {
+  display: block;
+  font-size: 16px;
+  text-align: left;
+  margin: 5px auto;
+}
+
 /* ----------------------------------- */
 
 /* DATE AND TIME DIV */
@@ -168,10 +168,6 @@ a {
 
 .comments {
   width: 82px;
-  height: 16px;
-  font-size: 16px;
-  font-weight: 500;
-  letter-spacing: -0.2px;
   text-align: left;
 }
 
